# SITypes

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile.backup  README.md  SIDimensionality.tab.c  SIDimensionality.tab.h  SIDimensionalityParser.tab.h  SIScalar.tab.c  SIScalar.tab.h  SIScalarParser.output  SIScalarParser.tab.c  SIScalarParser.tab.h  SIUNIT_MIGRATION_CHECKLIST.md  SIUnit.c  SIUnit.tab.c  SIUnit.tab.h  SIUnitExpressionParser.output  SIUnitExpressionSpecs.md  SPECIFICATION.md  ToDo.txt  WARNING_SUPPRESSIONS.md  compile_commands.json  debug_quartertsp  debug_quartertsp.c  lex.sis.c  link_test.c  run_power_test.c  test_leak_debug  test_leak_debug.c  test_leak_debug_normal  y.output
,github/workflows/: ci.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
SITypes.xcodeproj/: project.pbxproj
SITypes.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SITypes.xcworkspace/: contents.xcworkspacedata
docs/: Doxyfile  README.md  background.rst  conf.py  index.rst
docs/_build/: background.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: custom.css
docs/api/: SIDimensionality.rst  SIQuantity.rst  SIScalarConstants.rst  SIUnit.rst
doxygen/xml/: Doxyfile.xml  _s_i_dimensionality_8c.xml  _s_i_dimensionality_8h.xml  _s_i_dimensionality_parser_8h.xml  _s_i_dimensionality_parser_8y.xml  _s_i_dimensionality_scanner_8c.xml  _s_i_dimensionality_scanner_8l.xml  _s_i_formula_mass_parser_8c.xml  _s_i_library_8h.xml  _s_i_quantity_8c.xml  _s_i_quantity_8h.xml  _s_i_scalar_8c.xml  _s_i_scalar_8h.xml  _s_i_scalar_constants_8c.xml  _s_i_scalar_constants_8h.xml  _s_i_scalar_parser_8c.xml  _s_i_scalar_parser_8h.xml  _s_i_scalar_parser_8y.xml  _s_i_scalar_scanner_8c.xml  _s_i_scalar_scanner_8l.xml  _s_i_unit_8c.xml  _s_i_unit_8h.xml  _s_i_unit_parser_8h.xml  _s_i_unit_parser_8y.xml  _s_i_unit_scanner_8c.xml  _s_i_unit_scanner_8l.xml  group___s_i_dimensionality.xml  index.xml  struct_____s_i_dimensionality.xml  struct_____s_i_quantity.xml  struct_____s_i_scalar.xml  struct_____s_i_unit.xml  struct____scalar_node.xml  struct____scalar_node_constant_function.xml  struct____scalar_node_math_function.xml  struct____scalar_value.xml  struct____symbol.xml  structyy__buffer__state.xml  structyy__trans__info.xml  union_____s_i_number.xml
logs_extracted/: 0_Build & Test (ubuntu-latest.x64).txt  1_Build & Test (macos-latest).txt  2_Build & Test (windows-latest).txt
logs_extracted/Build & Test (macos-latest)/: 10_Upload library artifacts.txt  1_Set up job.txt  22_Post Cache third_party (OCTypes zips + extracted).txt  23_Post Cache ccache.txt  24_Post Checkout.txt  25_Complete job.txt  2_Checkout.txt  4_Install deps (macOS).txt  6_Cache ccache.txt  7_Cache third_party (OCTypes zips + extracted).txt  8_Build & test (Linux_macOS).txt
logs_extracted/Build & Test (ubuntu-latest.x64)/: 10_Upload library artifacts.txt  11_Package public headers (Ubuntu).txt  12_Upload headers artifact (Ubuntu).txt  1_Set up job.txt  22_Post Cache third_party (OCTypes zips + extracted).txt  23_Post Cache ccache.txt  24_Post Checkout.txt  25_Complete job.txt  2_Checkout.txt  3_Install deps (Linux).txt  6_Cache ccache.txt  7_Cache third_party (OCTypes zips + extracted).txt  8_Build & test (Linux_macOS).txt
logs_extracted/Build & Test (windows-latest)/: 1_Set up job.txt  24_Post Checkout.txt  25_Complete job.txt  2_Checkout.txt  5_Set up MSYS2 & MinGW (Windows).txt  6_Cache ccache.txt  7_Cache third_party (OCTypes zips + extracted).txt  9_Build & test (Windows).txt
logs_extracted_new/: 1_Build & Test (macos-latest).txt  2_Build & Test (windows-latest).txt  3_Build & Test (ubuntu-latest.x64).txt
logs_extracted_new/Build & Test (macos-latest)/: 10_Upload library artifacts.txt  1_Set up job.txt  22_Post Cache third_party (OCTypes zips + extracted).txt  23_Post Cache ccache.txt  24_Post Checkout.txt  25_Complete job.txt  2_Checkout.txt  4_Install deps (macOS).txt  6_Cache ccache.txt  7_Cache third_party (OCTypes zips + extracted).txt  8_Build & test (Linux_macOS).txt
logs_extracted_new/Build & Test (ubuntu-latest.x64)/: 10_Upload library artifacts.txt  11_Package public headers (Ubuntu).txt  12_Upload headers artifact (Ubuntu).txt  1_Set up job.txt  22_Post Cache third_party (OCTypes zips + extracted).txt  23_Post Cache ccache.txt  24_Post Checkout.txt  25_Complete job.txt  2_Checkout.txt  3_Install deps (Linux).txt  6_Cache ccache.txt  8_Build & test (Linux_macOS).txt  (+1 more)
src/: Makefile  PSFormulaMassParser.c  PSFormulaMassParser.l  PSQuantity.c  PSQuantity.h  PSScalar.c  PSScalar.h  PSScalarConstants.c  PSScalarConstants.h  PSScalarParser.c  PSScalarParser.h  PSScalarParser.y  PSScalarScanner.l  SIDimensionality.c  SIDimensionality.h  SIDimensionality.py  SIDimensionalityLib.c  SIDimensionalityParser.h  SIDimensionalityParser.y  SIDimensionalityPrivate.h  SIDimensionalityScanner.c  SIDimensionalityScanner.l  SIFormulaMassParser.c  SIFormulaScanner.l  SILibrary.c  SILibrary.h  SIQuantity.c  SIQuantity.h  SIScalar.c  SIScalar.h  SIScalarConstants.c  SIScalarConstants.h  SIScalarConstantsData.h  SIScalarParser.c  SIScalarParser.h  SIScalarParser.y  SIScalarParserHelpers.c  SIScalarScanner.c  SIScalarScanner.l  SITypes.c  (+17 more)
tests/: dimensionality_tests.c  dimensionality_tests.h  main.c  octypes_tests.c  octypes_tests.h  scalar_tests.c  scalar_tests.h  test_dimensionality.c  test_dimensionality.h  test_duplicate_units.c  test_duplicate_units.h  test_json_typed.c  test_json_typed.h  test_library_key.c  test_library_key.h  test_octypes.c  test_octypes.h  test_power_bugs.c  test_power_bugs.h  test_scalar.c  test_scalar.h  test_scalar_parser.c  test_scalar_parser.h  test_siunit2.c  test_siunit2.h  test_siunit2_power.c  test_siunit2_power.h  test_unit.c  test_unit.h  test_unit_expression.c  test_unit_expression.h  test_unit_from_expression_robust.c  test_unit_from_expression_robust.h  test_unit_power_operations.c  test_unit_power_operations.h  test_utils.h  unit_tests.c  unit_tests.h
(+70 files in other folders)
